changed spacing issues; add html notes

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -90,6 +90,7 @@ main {
 
 #bernard-img {
     display: flex;
+    align-items: flex-start;
     justify-content: center;
     width: 100%;
     overflow: clip;
@@ -97,6 +98,7 @@ main {
 
 #bernard-img img {
     position: relative;
+    max-height: 100%;
     top: 5%;
 }
 
@@ -142,7 +144,7 @@ main {
     display: none;
     align-content: center;
     justify-content: center;
-    margin: 0px 50px 0px 50px; 
+    margin: 0px 10px 0px 10px; 
     background-color: rgb(91, 4, 112);
     font-family: "Gloria Hallelujah";
     text-align: center;
@@ -158,8 +160,8 @@ main {
     width: 100%;
     height: 100%;
     justify-content: space-around;
-    padding-top: 50px;
     font-size: 3vh;
+    padding-top: 20px;
     text-align: center;
     font-family: "Gloria Hallelujah";
     font-weight: 600;
@@ -214,7 +216,7 @@ h3 {
 
 #your-score-container {
     display: flex;
-    width: 60%;
+    width: 75%;
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px; 
